--- a/homequiz.html
+++ b/homequiz.html
@@ -60,7 +60,7 @@
             <!-- Begin question #1-->
             <div class="row">
               <div class="col-xs-12">
-                <img src="img/doorq.jpg"> choose a front door
+                <img src="img/doorq.jpg">
               </div>
 
               <div class="col-xs-6">
@@ -93,7 +93,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/arubav2.jpg">
+                    <img src="img/cottagedoor.jpg">
                     <input class="answer" type="radio" name="interior" value="cottage"> Choice 4
                   </label>
                 </div>
@@ -104,13 +104,13 @@
             <!-- Begin question #2-->
             <div class="row">
               <div class="col-xs-12">
-                <img src="img/couchq.jpg"> choose a couch
+                <img src="img/couchq.jpg">
               </div>
 
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/bahamash.jpg">
+                    <img src="img/cottagecouch.jpg">
                     <input class="answer" type="radio" name="home" value="cottage"> Choice 1
                   </label>
                 </div>
@@ -119,7 +119,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/hawaiih.jpg">
+                    <img src="img/mansioncouch.jpg">
                     <input class="answer" type="radio" name="home" value="mansion"> Choice 2
                   </label>
                 </div>
@@ -128,7 +128,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/borah.jpg">
+                    <img src="img/condocouch.jpg">
                     <input class="answer" type="radio" name="home" value="condo"> Choice 3
                   </label>
                 </div>
@@ -137,7 +137,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/arubah.jpg">
+                    <img src="img/towncouch.jpg">
                     <input class="answer" type="radio" name="home" value="town"> Choice 4
                   </label>
                 </div>
@@ -148,13 +148,13 @@
             <!-- Begin question #3-->
             <div class="row">
               <div class="col-xs-12">
-                <img src="img/kitchenq.jpg"> choose a kitchen
+                <img src="img/kitchenq.jpg">
               </div>
 
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/waffle.jpg">
+                    <img src="img/townkitchen.jpg">
                     <input class="answer" type="radio" name="breakfast" value="town"> Choice 1
                   </label>
                 </div>
@@ -163,7 +163,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/granola.jpg">
+                    <img src="img/condokitchen.jpg">
                     <input class="answer" type="radio" name="breakfast" value="condo"> Choice 2
                   </label>
                 </div>
@@ -172,7 +172,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/fruit.jpg">
+                    <img src="img/mansionkitchen.jpg">
                     <input class="answer" type="radio" name="breakfast" value="mansion"> Choice 3
                   </label>
                 </div>
@@ -181,7 +181,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/omelette.jpg">
+                    <img src="img/cottagekitchen.jpg">
                     <input class="answer" type="radio" name="breakfast" value="cottage"> Choice 4
                   </label>
                 </div>
@@ -192,13 +192,13 @@
             <!-- Begin question #4-->
             <div class="row">
               <div class="col-xs-12">
-                <img src="img/dishq.jpg"> choose a dish set
+                <img src="img/dishq.jpg">
               </div>
 
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/swimmingwd1.jpg">
+                    <img src="img/gold.jpg">
                     <input class="answer" type="radio" name="activity" value="mansion"> Gold
                   </label>
                 </div>
@@ -207,7 +207,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/scubadiving1.jpg">
+                    <img src="img/china.jpg">
                     <input class="answer" type="radio" name="activity" value="cottage"> China
                   </label>
                 </div>
@@ -216,7 +216,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/horse1.jpg">
+                    <img src="img/plastic.jpg">
                     <input class="answer" type="radio" name="activity" value="condo"> Plastic
                   </label>
                 </div>
@@ -225,7 +225,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/helicopter1.jpg">
+                    <img src="img/silver.jpg">
                     <input class="answer" type="radio" name="activity" value="town"> Silver
                   </label>
                 </div>
@@ -236,13 +236,13 @@
             <!-- Begin question #5-->
             <div class="row">
               <div class="col-xs-12">
-                <img src="img/luxuryq.jpg"> choose a luxury
+                <img src="img/luxuryq.jpg">
               </div>
 
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/copter.jpg">
+                    <img src="img/hottub.jpg">
                     <input class="answer" type="radio" name="travel" value="cottage"> Hot Tub
                   </label>
                 </div>
@@ -251,7 +251,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/cruise.jpg">
+                    <img src="img/pool.jpg">
                     <input class="answer" type="radio" name="travel" value="mansion"> Pool
                   </label>
                 </div>
@@ -260,7 +260,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/privatejet1.jpg">
+                    <img src="img/bigyard.jpg">
                     <input class="answer" type="radio" name="travel" value="town"> Big Yard
                   </label>
                 </div>
@@ -269,7 +269,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/airline.jpg">
+                    <img src="img/deck.jpg">
                     <input class="answer" type="radio" name="travel" value="condo"> Nice Deck
                   </label>
                 </div>
@@ -280,13 +280,13 @@
             <!-- Begin question #5-->
             <div class="row">
               <div class="col-xs-12">
-                <img src="img/petq.jpg">choose a pet
+                <img src="img/petq.jpg">
               </div>
 
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/pineapple.jpg">
+                    <img src="img/fish.jpg">
                     <input class="answer" type="radio" name="fruit" value="condo"> Fish
                   </label>
                 </div>
@@ -295,7 +295,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/kiwi.jpg">
+                    <img src="img/dog.jpg">
                     <input class="answer" type="radio" name="fruit" value="town"> Dog
                   </label>
                 </div>
@@ -304,7 +304,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/mango2.jpg">
+                    <img src="img/horse2.jpg">
                     <input class="answer" type="radio" name="fruit" value="mansion"> Horse
                   </label>
                 </div>
@@ -313,7 +313,7 @@
               <div class="col-xs-6">
                 <div class="choice">
                   <label>
-                    <img src="img/banana2.jpg">
+                    <img src="img/cat.jpg">
                     <input class="answer" type="radio" name="fruit" value="cottage"> Cat
                   </label>
                 </div>
@@ -350,8 +350,8 @@
             </div>
 
             <div class="quiz-link">
-              <img src="https://dummyimage.com/400x250/aaa/fff">
-              <h4></h4>
+              <img src="img/vacationimage.jpg">
+              <h4><a href="https://kt1234.github.io/patfeedquiz/vacation.html">Where is Your Dream Vacation Destination?</a></h4>
             </div>
 
             <div class="quiz-link">
@@ -414,7 +414,7 @@
   <!-- include any javascript below this line -->
   <script src="https://code.jquery.com/jquery-2.2.4.js"></script>
   <script src="js/odin-0.7.1.js"></script>
-  <script src="js/vacation_checker.js"></script>
+  <script src="js/homequiz.js"></script>
 
 </body>
 </html>
