--- a/vacation.html
+++ b/vacation.html
@@ -350,18 +350,18 @@
             </div>
 
             <div class="quiz-link">
-              <img src="https://dummyimage.com/400x250/aaa/fff">
-              <h4></h4>
+              <img src="img/homeimage.jpg">
+              <h4><a href="https://kt1234.github.io/patfeedquiz/homequiz.html">Answer These Six Questions and Well Guess Your Dream House</a></h4>
             </div>
 
             <div class="quiz-link">
               <img src="https://dummyimage.com/400x250/aaa/fff">
-              <h4></h4>
+              <h4>quiz title</h4>
             </div>
 
             <div class="quiz-link">
               <img src="https://dummyimage.com/400x250/aaa/fff">
-              <h4></h4>
+              <h4>quiz title</h4>
             </div>
           </div>
         </div>
